--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,13 @@
   <artifactId>maven-quick-start</artifactId>
   <version>1.0</version>
   <packaging>jar</packaging>
-
+  <dependencies>
+  <dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-lang3</artifactId>
+    <version>3.4</version>
+  </dependency>
+  </dependencies>
   <build>
     
     <plugins>
